--- a/TZ First Mate4/Base.lproj/Main copy.storyboard
+++ b/TZ First Mate4/Base.lproj/Main copy.storyboard
@@ -411,17 +411,43 @@
                                     <action selector="email:" destination="eAK-6A-v2T" eventType="touchUpInside" id="og2-Vt-bbK"/>
                                 </connections>
                             </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Iq6-Ou-6u8">
+                                <rect key="frame" x="-23" y="-15" width="46" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="50" id="9xA-UU-rB5"/>
+                                    <constraint firstAttribute="height" constant="25" id="em5-Ws-V5B"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                <state key="normal" title="Exit"/>
+                                <variation key="default">
+                                    <mask key="constraints">
+                                        <exclude reference="9xA-UU-rB5"/>
+                                        <exclude reference="em5-Ws-V5B"/>
+                                    </mask>
+                                </variation>
+                                <variation key="heightClass=regular-widthClass=compact">
+                                    <mask key="constraints">
+                                        <include reference="9xA-UU-rB5"/>
+                                        <include reference="em5-Ws-V5B"/>
+                                    </mask>
+                                </variation>
+                                <connections>
+                                    <segue destination="9pv-A4-QxB" kind="showDetail" id="XVQ-eO-aeN"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstAttribute="trailing" secondItem="6W5-lK-5he" secondAttribute="trailing" id="Coy-Sf-yo2"/>
                             <constraint firstItem="juf-EK-oQs" firstAttribute="top" secondItem="pee-3e-Hql" secondAttribute="bottom" id="EaJ-dd-X79"/>
                             <constraint firstAttribute="trailing" secondItem="ttC-YJ-Syr" secondAttribute="trailing" id="MQo-ZH-bm8"/>
+                            <constraint firstItem="Iq6-Ou-6u8" firstAttribute="leading" secondItem="rHr-mT-d5d" secondAttribute="leadingMargin" id="O1k-Ea-a20"/>
+                            <constraint firstItem="Iq6-Ou-6u8" firstAttribute="top" secondItem="rHr-mT-d5d" secondAttribute="topMargin" constant="10" id="U9w-bX-rJi"/>
                             <constraint firstItem="6W5-lK-5he" firstAttribute="top" secondItem="ttC-YJ-Syr" secondAttribute="bottom" constant="20" id="WEx-Fn-od8"/>
                             <constraint firstAttribute="trailing" secondItem="juf-EK-oQs" secondAttribute="trailing" id="aoh-n2-KBx"/>
                             <constraint firstItem="ttC-YJ-Syr" firstAttribute="leading" secondItem="rHr-mT-d5d" secondAttribute="leading" id="arP-wy-kV7"/>
                             <constraint firstAttribute="trailing" secondItem="AZT-xh-a3j" secondAttribute="trailing" id="bZm-MI-XnZ"/>
-                            <constraint firstItem="pee-3e-Hql" firstAttribute="top" secondItem="jgn-XG-6m9" secondAttribute="bottom" id="cWi-fS-iyd"/>
+                            <constraint firstItem="pee-3e-Hql" firstAttribute="top" secondItem="jgn-XG-6m9" secondAttribute="bottom" constant="25" id="cWi-fS-iyd"/>
                             <constraint firstItem="ttC-YJ-Syr" firstAttribute="top" secondItem="AZT-xh-a3j" secondAttribute="bottom" constant="20" id="gIg-qN-TkV"/>
                             <constraint firstItem="6W5-lK-5he" firstAttribute="leading" secondItem="rHr-mT-d5d" secondAttribute="leading" id="kDP-At-plP"/>
                             <constraint firstItem="juf-EK-oQs" firstAttribute="leading" secondItem="rHr-mT-d5d" secondAttribute="leading" id="nav-LA-IPO"/>
@@ -437,8 +463,11 @@
                                 <exclude reference="AZT-xh-a3j"/>
                                 <exclude reference="ttC-YJ-Syr"/>
                                 <exclude reference="6W5-lK-5he"/>
+                                <exclude reference="Iq6-Ou-6u8"/>
                             </mask>
                             <mask key="constraints">
+                                <exclude reference="O1k-Ea-a20"/>
+                                <exclude reference="U9w-bX-rJi"/>
                                 <exclude reference="cWi-fS-iyd"/>
                                 <exclude reference="u3X-YP-A6v"/>
                                 <exclude reference="vp0-Mp-T3r"/>
@@ -463,8 +492,11 @@
                                 <include reference="AZT-xh-a3j"/>
                                 <include reference="ttC-YJ-Syr"/>
                                 <include reference="6W5-lK-5he"/>
+                                <include reference="Iq6-Ou-6u8"/>
                             </mask>
                             <mask key="constraints">
+                                <include reference="O1k-Ea-a20"/>
+                                <include reference="U9w-bX-rJi"/>
                                 <include reference="cWi-fS-iyd"/>
                                 <include reference="u3X-YP-A6v"/>
                                 <include reference="vp0-Mp-T3r"/>
@@ -1158,6 +1190,6 @@
         <image name="first" width="30" height="30"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="Dro-a5-5x9"/>
+        <segue reference="XVQ-eO-aeN"/>
     </inferredMetricsTieBreakers>
 </document>
