--- a/TZ First Mate4/Base.lproj/Main copy.storyboard
+++ b/TZ First Mate4/Base.lproj/Main copy.storyboard
@@ -322,6 +322,8 @@
                         <subviews>
                             <pickerView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="pee-3e-Hql">
                                 <rect key="frame" x="0.0" y="-216" width="320" height="216"/>
+                                <color key="backgroundColor" red="1" green="0.045189449225558453" blue="0.0032960181027763547" alpha="1" colorSpace="calibratedRGB"/>
+                                <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="80" id="wBX-jO-yxm"/>
                                 </constraints>
@@ -338,6 +340,8 @@
                             </pickerView>
                             <pickerView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="juf-EK-oQs">
                                 <rect key="frame" x="0.0" y="-216" width="320" height="216"/>
+                                <color key="backgroundColor" red="1" green="0.045189449225558453" blue="0.0032960181027763547" alpha="1" colorSpace="calibratedRGB"/>
+                                <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="90" id="NOz-qI-15v"/>
                                 </constraints>
@@ -354,11 +358,12 @@
                             </pickerView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Teacher Name Here" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="15" adjustsLetterSpacingToFitWidth="YES" translatesAutoresizingMaskIntoConstraints="NO" id="AZT-xh-a3j" userLabel="Teacher Name">
                                 <rect key="frame" x="-42" y="-21" width="42" height="21"/>
+                                <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="25" id="DfW-WH-fg8"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="25"/>
-                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                                 <variation key="default">
                                     <mask key="constraints">
@@ -371,31 +376,13 @@
                                     </mask>
                                 </variation>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Room:" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ttC-YJ-Syr" userLabel="Room:">
-                                <rect key="frame" x="-42" y="-21" width="42" height="21"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="25" id="nAZ-ad-dxR"/>
-                                </constraints>
-                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
-                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
-                                <nil key="highlightedColor"/>
-                                <variation key="default">
-                                    <mask key="constraints">
-                                        <exclude reference="nAZ-ad-dxR"/>
-                                    </mask>
-                                </variation>
-                                <variation key="heightClass=regular-widthClass=compact">
-                                    <mask key="constraints">
-                                        <include reference="nAZ-ad-dxR"/>
-                                    </mask>
-                                </variation>
-                            </label>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="6W5-lK-5he">
                                 <rect key="frame" x="-23" y="-15" width="46" height="30"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="25" id="wVw-x3-kcJ"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <state key="normal" title="Email:"/>
                                 <variation key="default">
                                     <mask key="constraints">
@@ -418,6 +405,7 @@
                                     <constraint firstAttribute="height" constant="25" id="em5-Ws-V5B"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <state key="normal" title="Exit"/>
                                 <variation key="default">
                                     <mask key="constraints">
@@ -435,8 +423,28 @@
                                     <segue destination="9pv-A4-QxB" kind="showDetail" id="XVQ-eO-aeN"/>
                                 </connections>
                             </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Room:" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ttC-YJ-Syr" userLabel="Room:">
+                                <rect key="frame" x="-42" y="-21" width="42" height="21"/>
+                                <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="25" id="nAZ-ad-dxR"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                                <variation key="default">
+                                    <mask key="constraints">
+                                        <exclude reference="nAZ-ad-dxR"/>
+                                    </mask>
+                                </variation>
+                                <variation key="heightClass=regular-widthClass=compact">
+                                    <mask key="constraints">
+                                        <include reference="nAZ-ad-dxR"/>
+                                    </mask>
+                                </variation>
+                            </label>
                         </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <color key="backgroundColor" red="1" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
                             <constraint firstAttribute="trailing" secondItem="6W5-lK-5he" secondAttribute="trailing" id="Coy-Sf-yo2"/>
                             <constraint firstItem="juf-EK-oQs" firstAttribute="top" secondItem="pee-3e-Hql" secondAttribute="bottom" id="EaJ-dd-X79"/>
@@ -461,28 +469,28 @@
                                 <exclude reference="pee-3e-Hql"/>
                                 <exclude reference="juf-EK-oQs"/>
                                 <exclude reference="AZT-xh-a3j"/>
-                                <exclude reference="ttC-YJ-Syr"/>
                                 <exclude reference="6W5-lK-5he"/>
                                 <exclude reference="Iq6-Ou-6u8"/>
+                                <exclude reference="ttC-YJ-Syr"/>
                             </mask>
                             <mask key="constraints">
-                                <exclude reference="O1k-Ea-a20"/>
-                                <exclude reference="U9w-bX-rJi"/>
-                                <exclude reference="cWi-fS-iyd"/>
-                                <exclude reference="u3X-YP-A6v"/>
-                                <exclude reference="vp0-Mp-T3r"/>
                                 <exclude reference="EaJ-dd-X79"/>
                                 <exclude reference="aoh-n2-KBx"/>
                                 <exclude reference="nav-LA-IPO"/>
+                                <exclude reference="cWi-fS-iyd"/>
+                                <exclude reference="u3X-YP-A6v"/>
+                                <exclude reference="vp0-Mp-T3r"/>
+                                <exclude reference="Coy-Sf-yo2"/>
+                                <exclude reference="WEx-Fn-od8"/>
+                                <exclude reference="kDP-At-plP"/>
+                                <exclude reference="O1k-Ea-a20"/>
+                                <exclude reference="U9w-bX-rJi"/>
                                 <exclude reference="bZm-MI-XnZ"/>
                                 <exclude reference="t21-Jo-Zfr"/>
                                 <exclude reference="yWp-Cn-hto"/>
                                 <exclude reference="MQo-ZH-bm8"/>
                                 <exclude reference="arP-wy-kV7"/>
                                 <exclude reference="gIg-qN-TkV"/>
-                                <exclude reference="Coy-Sf-yo2"/>
-                                <exclude reference="WEx-Fn-od8"/>
-                                <exclude reference="kDP-At-plP"/>
                             </mask>
                         </variation>
                         <variation key="heightClass=regular-widthClass=compact">
@@ -490,28 +498,28 @@
                                 <include reference="pee-3e-Hql"/>
                                 <include reference="juf-EK-oQs"/>
                                 <include reference="AZT-xh-a3j"/>
-                                <include reference="ttC-YJ-Syr"/>
                                 <include reference="6W5-lK-5he"/>
                                 <include reference="Iq6-Ou-6u8"/>
+                                <include reference="ttC-YJ-Syr"/>
                             </mask>
                             <mask key="constraints">
-                                <include reference="O1k-Ea-a20"/>
-                                <include reference="U9w-bX-rJi"/>
-                                <include reference="cWi-fS-iyd"/>
-                                <include reference="u3X-YP-A6v"/>
-                                <include reference="vp0-Mp-T3r"/>
                                 <include reference="EaJ-dd-X79"/>
                                 <include reference="aoh-n2-KBx"/>
                                 <include reference="nav-LA-IPO"/>
+                                <include reference="cWi-fS-iyd"/>
+                                <include reference="u3X-YP-A6v"/>
+                                <include reference="vp0-Mp-T3r"/>
+                                <include reference="Coy-Sf-yo2"/>
+                                <include reference="WEx-Fn-od8"/>
+                                <include reference="kDP-At-plP"/>
+                                <include reference="O1k-Ea-a20"/>
+                                <include reference="U9w-bX-rJi"/>
                                 <include reference="bZm-MI-XnZ"/>
                                 <include reference="t21-Jo-Zfr"/>
                                 <include reference="yWp-Cn-hto"/>
                                 <include reference="MQo-ZH-bm8"/>
                                 <include reference="arP-wy-kV7"/>
                                 <include reference="gIg-qN-TkV"/>
-                                <include reference="Coy-Sf-yo2"/>
-                                <include reference="WEx-Fn-od8"/>
-                                <include reference="kDP-At-plP"/>
                             </mask>
                         </variation>
                     </view>
